--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 
 #root {
   --max-width-nav: 75rem;
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
   text-align: center;
 }
 
 
+.logo-container {
+  width: 215px;
+  height: 100%;
+}
