--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,7 @@
 .preparation ol>li::before {
   content: counter(step-counter);
 }
+.video-container{
+  box-shadow: -10px -10px 10px white,
+                12px 12px 12px theme(colors.grey);
+}
