--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
+  
+  font-family: "Ubuntu", serif;
+  font-weight: 200;
   color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: theme(colors.black);
-
+  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
   
   
+  
+  background-color: theme(colors.black);
 }
 
 body {
@@ -25,5 +24,9 @@ body {
   display: flex;
 }
 
+h1, h2, h3, h4 {
+  /* font-family: "Baskervville SC", sans-serif; */
+  font-weight: 400;
 
+}
 
